[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trading-env"
version = "1.0.0"
description = "A real-world stock trading OpenEnv environment for RL agents."
readme = "README.md"
authors = [{ name = "Hariharan M", email = "hariharanm23ads@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "pandas"
]

[tool.setuptools]
packages = ["env", "graders"]